[package]
edition = "2018"
name = "raft"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "0.2"
clap = "3.0.0-beta.4"
futures = "0.3"
lazy_static = "1.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tarpc = {version = "0.26", features = ["full"]}
thiserror = "1.0"
tokio = {version = "1.10", features = ["full"]}
tracing = "0.1"
tracing-subscriber = "0.2"
